<resources>
    <string name="app_name">Gini Bank</string>
    <string name="additional_onboarding_page_title">Custom onboarding page</string>
    <string name="additional_onboarding_page_message">This is a an example of a custom onboarding page</string>
    <string name="title_extractions">Extractions</string>
    <string name="title_no_extractions">No Extractions</string>
    <string name="welcome_to_gini">Willkommen bei Gini</string>
    <string name="or_use_label">oder nutzen Sie die</string>
    <string name="start_gini_photo_payment">Fotoüberweisung</string>
    <string name="example_of_photo_payment">Beispiel für die Integration von Fotoüberweisung in der Banking-App</string>
    <string name="enter_your_iban_code">Geben Sie Ihre IBAN ein</string>
    <string name="menu_item_feedback">Submit feedback &amp; close</string>
    <string name="menu_item_view_picture">View Picture</string>
    <string name="document_size_too_large">Diese Datei ist leider größer als 5MB.</string>
    <string name="unsupported_document_type">Nur Dateien vom Format jpg oder PDF können analysiert werden.</string>
    <string name="storage_permission_denied_message">Nur mit Datei-Zugriff können gespeicherte Rechnungen hochgeladen werden.</string>
    <string name="grant_access">Zugriff erteilen</string>
    <string name="cancel">Abbrechen</string>
    <string name="storage_permission_rationale">Um gespeicherte Bilder oder PDFs zu analysieren, wird Datei-Zugriff auf dem Gerät benötigt.</string>
    <string name="camera_permission_denied_message">Nur mit Kamera-Zugriff können Sie die Gini Capture SDK verwenden.</string>
    <string name="camera_permission_rationale">Um Rechnungen fotografieren zu können, wird Kamera-Zugriff benötigt.</string>
    <string name="gini_api_type_label">Gini API Type</string>
    <string-array name="gini_api_types">
        <item>BANK</item>
    </string-array>
    <string name="custom_help_screen_title">Custom Help Screen</string>
    <string name="custom_help_screen_greeting">This is a custom help screen.</string>
    <string name="analyzed_document_id">Analyzed Gini Bank API Document ID: %s</string>
    <string name="scheduled_payment_requested">Scheduled payment requested</string>
    <string name="configuration_options_header">Configuration options</string>
    <string name="animated_onboarding_illustrations_switch_label">Animated onboarding illustrations</string>
    <string name="custom_loading_indicator_switch_label">Custom loading indicator animation</string>
    <string name="disable_camera_permission">Do not request camera permission</string>
    <string name="txt_show_custom_help_item">Show custom help item</string>
    <string name="gini_bank_sdk_version">Gini Bank SDK v: </string>
    <string name="gini_capture_sdk_version">\nGini Capture SDK v: </string>
    <string name="gini_client_id">\nClient Id: </string>
    <string name="configuration_activity_title">Configuration</string>
    <string name="configuration_feature_label">Features</string>
    <string name="configuration_bottom_nav_label">Bottom navigation bar</string>
    <string name="configuration_onboarding_label">Onboarding</string>
    <string name="configuration_camera_label">Camera</string>
    <string name="configuration_analysis_label">Analysis</string>
    <string name="configuration_help_label">Help</string>
    <string name="configuration_return_assistant_label">Return assistant</string>
    <string name="configuration_transaction_docs_label">Transaction Docs</string>
    <string name="configuration_ui_customization_label">UI customization</string>
    <string name="configuration_debug_development_label">Debug and development</string>
    <string name="close_gini_sdk_configuration">Close</string>
    <string name="example_label">Example</string>
    <string name="relaunch_to_use_default_configuration">Please relaunch the app to use the default GiniConfiguration values.</string>
    <string name="close_screen_for_configurations_to_take_place">The configuration changes will take effect after closing this screen.</string>
    <string name="default_sdk_configuration_switch_label">SDK default configurations</string>
    <string name="already_paid_hint_switch_label">Already Paid Hint</string>
    <string name="payment_due_hint_switch_label">Payment Due Hint</string>
    <string name="payment_schedule_hint_switch_label">Payment Schedule Hint</string>
    <string name="payment_due_hint_threshold_days_label">Payment Due Hint Threshold Days</string>
    <string name="credit_note_hint_switch_label">Credit Note Hint</string>
    <string name="open_with_switch_label">Open with</string>
    <string name="open_with_uri_based_api_switch_label">Open with: use URI-based API</string>
    <string name="open_with_uri_based_api_toast">Open with: URI-based API</string>
    <string name="open_with_uri_based_api_no_uris_toast">Open with failed: no URIs in intent</string>
    <string name="qr_code_scanning_switch_label">QR code scanning</string>
    <string name="only_qr_code_scanning_switch_label">QR code scanning only</string>
    <string name="only_qr_code_scanning_switch_description">This will work if the \'Qr code scanning\' switch is also enabled.</string>
    <string name="multi_page_switch_label">Multi page</string>
    <string name="flash_button_switch_label">Display flash button</string>
    <string name="flash_button_switch_description">Display flash button in camera screen</string>
    <string name="flash_on_by_default_switch_label">Flash default state</string>
    <string name="flash_on_by_default_switch_description">This will work if the \'Flash button\' switch is also enabled.</string>
    <string name="document_import_file_types_disabled_button_label">Disabled</string>
    <string name="document_import_file_types_only_pdf_button_label">PDF</string>
    <string name="document_import_file_types_pdf_and_image_button_label">PDF &amp; Images</string>
    <string name="document_import_file_types_segmented_button_label">Document Import File Types</string>
    <string name="bottom_navbar_switch_label">Bottom navigation bar</string>
    <string name="help_screens_bottom_navbar_switch_label">Help screens custom bottom navigation bar</string>
    <string name="error_screens_bottom_navbar_switch_label">Error screens custom bottom navigation bar</string>
    <string name="custom_bottom_navbar_switch_description">The custom bottom navigation bar is shown if \'Bottom navigation bar\' is also enabled.</string>
    <string name="camera_screen_custom_bottom_navbar_switch_label">Camera screen custom bottom navigation bar</string>
    <string name="review_screen_custom_bottom_navbar_switch_label">Review screen custom bottom navigation bar</string>
    <string name="skonto_screen_custom_bottom_navbar_switch_label">Skonto screen custom bottom navigation bar</string>
    <string name="skonto_help_screen_custom_bottom_navbar_switch_label">Skonto help screen custom bottom navigation bar</string>
    <string name="digital_invoice_skonto_screen_custom_bottom_navbar_switch_label">Return Assistant Skonto screen custom bottom navigation bar</string>
    <string name="onboarding_screens_at_every_launch_switch_label">Onboarding screens at every launch</string>
    <string name="onboarding_screens_at_first_launch_switch_label">Onboarding screens at first launch</string>
    <string name="onboarding_screens_at_every_launch_switch_description">Overwrites \'Onboarding screens at first launch\'.</string>
    <string name="custom_onboarding_pages_switch_label">Custom onboarding pages</string>
    <string name="custom_onboarding_pages_switch_description">This will work if the \`Onboarding show at every launch\` switch is also enabled.</string>
    <string name="custom_onboarding_align_corners_page_switch_label">Onboarding \`align corners\` page custom illustration</string>
    <string name="custom_onboarding_lighting_page_switch_label">Onboarding \`lighting\` page custom illustration</string>
    <string name="custom_onboarding_qr_code_page_switch_label">Onboarding \`QR code\` page custom illustration</string>
    <string name="custom_onboarding_multi_page_switch_label">Onboarding \`multi page\` page custom illustration</string>
    <string name="configuration_button_remove_saf_data">Remove SAF Data</string>
    <string name="onboarding_custom_bottom_nav_bar_switch_label">Onboarding custom bottom navigation bar</string>
    <string name="onboarding_custom_bottom_nav_bar_switch_description">The custom bottom navigation bar is shown if \`Bottom navigation bar\` is also enabled.</string>
    <string name="buttons_custom_loading_indicator_switch_label">Buttons custom loading indicator</string>
    <string name="buttons_custom_loading_indicator_switch_description">Set custom loading indicator on the buttons which support loading.</string>
    <string name="screen_custom_loading_indicator_switch_label">Screen custom loading indicator</string>
    <string name="screen_custom_loading_indicator_switch_description">Show a custom loading indicator on the document analysis screen.</string>
    <string name="supported_formats_screen_switch_label">Supported formats screen</string>
    <string name="supported_formats_screen_switch_description">Show the supported formats screen in the Help menu.</string>
    <string name="help_custom_menu_items_switch_label">Help custom menu items</string>
    <string name="custom_navigation_controller_switch_label">Custom navigation controller</string>
    <string name="custom_primary_compose_button_switch_label">Custom primary button in Skonto</string>
    <string name="return_assistant_feature_switch_label">Return assistant feature</string>
    <string name="return_assistant_feature_switch_description">Present a digital representation of the invoice</string>
    <string name="skonto_feature_switch_label">Skonto feature</string>
    <string name="transaction_docs_feature_switch_label">Transaction Docs feature</string>
    <string name="return_assistant_onboarding_custom_illustration_switch_label">Return assistant onboarding custom illustration</string>
    <string name="return_assistant_help_bottom_navigation_bar_switch_label">Return assistant help bottom navigation bar</string>
    <string name="return_assistant_bottom_navigation_bar_switch_description">The custom bottom navigation bar is shown if both \`Bottom navigation bar\` and \`Return assistant feature\` are enabled.</string>
    <string name="return_assistant_onboarding_bottom_navigation_bar_switch_label">Return assistant onboarding bottom navigation bar</string>
    <string name="return_assistant_bottom_navigation_bar_switch_label">Return assistant bottom navigation bar</string>
    <string name="event_tracker_switch_label">Event tracker</string>
    <string name="save_invoices_feature_label">Save Invoices Locally</string>
    <string name="gini_error_switch_label">Gini error logger</string>
    <string name="custom_error_switch_label">Custom error logger</string>
    <string name="imported_file_size_bytes_limit">Imported File Size Bytes Limit</string>
    <string name="file_import_feature_is_disabled_dialog_message">`File import` feature is currently disabled. If you want to test this, please enable it in Gini configuration.</string>
    <string name="debug_mode_switch_label">Debug mode</string>
    <string name="allow_screenshots_label">Allow screenshots</string>
    <string name="recipient_hint">recipient</string>
    <string name="iban_hint">IBAN</string>
    <string name="amount_hint">Amount</string>
    <string name="purpose_hint">Purpose</string>
    <string name="return_to_business">Return to Business</string>
    <string name="resolve_payment">Pay</string>
    <string name="intent_filter_label_file_import_fragments">Fragments</string>
    <string name="start_gini_single_activity">Single Activity</string>
    <string name="open_tl_demo">Transaction List Demo</string>
</resources>