<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_corners"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/Base.TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/configuration_feature_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_openWith"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_with_switch_label" />

    <TextView
        android:id="@+id/tv_fileImportLabel"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_large"
        android:text="@string/document_import_file_types_segmented_button_label" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleBtn_fileImportSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btn_fileImportDisabled"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/document_import_file_types_disabled_button_label" />

        <Button
            android:id="@+id/btn_fileImportOnlyPdf"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/document_import_file_types_only_pdf_button_label" />

        <Button
            android:id="@+id/btn_fileImportPdfAndImage"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/document_import_file_types_pdf_and_image_button_label" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_qrCodeScanning"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_scanning_switch_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_onlyQRCodeScanning"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/only_qr_code_scanning_switch_label" />

    <TextView
        android:id="@+id/tv_onlyQrCodeDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/only_qr_code_scanning_switch_description" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_multiPage"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/multi_page_switch_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_returnAssistantFeature"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/return_assistant_feature_switch_label" />

    <TextView
        android:id="@+id/tv_returnAssistantFeatureDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_assistant_feature_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_skontoFeature"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/skonto_feature_switch_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_setupSdkWithDefaultConfiguration"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_sdk_configuration_switch_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_eventTracker"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/event_tracker_switch_label" />

</LinearLayout>

