<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_round_corners"
    android:padding="8dp">

    <TextView
        style="@style/Base.TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/configuration_camera_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_displayFlashButton"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash_button_switch_label" />

    <TextView
        android:id="@+id/tv_flashButtonDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash_button_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_flashOnByDefault"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash_on_by_default_switch_label" />

    <TextView
        android:id="@+id/tv_flashOnByDefaultDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash_on_by_default_switch_description" />

</LinearLayout>