<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_round_corners"
    android:padding="8dp">

    <TextView
        style="@style/Base.TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/configuration_onboarding_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_onboardingScreensAtFirstRun"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/onboarding_screens_at_first_launch_switch_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_onboardingScreensAtEveryLaunch"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/onboarding_screens_at_every_launch_switch_label" />

    <TextView
        android:id="@+id/tv_onboardingScreensAtEveryLaunchDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_screens_at_every_launch_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customOnboardingPages"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/custom_onboarding_pages_switch_label" />

    <TextView
        android:id="@+id/tv_customOnboardingPagesDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_onboarding_pages_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customOnboardingAlignCornersPage"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/custom_onboarding_align_corners_page_switch_label" />

    <TextView
        android:id="@+id/tv_customOnboardingAlignCornerPageDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_onboarding_pages_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customOnboardingLightingPage"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/custom_onboarding_lighting_page_switch_label" />

    <TextView
        android:id="@+id/tv_customOnboardingLightingPageDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_onboarding_pages_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customOnboardingQRCodePage"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/custom_onboarding_qr_code_page_switch_label" />

    <TextView
        android:id="@+id/tv_customOnboardingQRCodePageDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_onboarding_pages_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customOnboardingMultiPage"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/custom_onboarding_multi_page_switch_label" />

    <TextView
        android:id="@+id/tv_customOnboardingMultiPageDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_onboarding_pages_switch_description" />
</LinearLayout>