<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_round_corners"
    android:padding="8dp">

    <TextView
        style="@style/Base.TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/configuration_help_label" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_supportedFormatsScreen"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/supported_formats_screen_switch_label" />

    <TextView
        android:id="@+id/tv_supportedFormatsScreenDescription"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supported_formats_screen_switch_description" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_customHelpMenuItems"
        style="@style/SwitchConfigurationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gc_medium_12"
        android:text="@string/help_custom_menu_items_switch_label" />

</LinearLayout>